Created basic tests for Customer in CustomerServiceImplTest. Also added TestData to retrieve a sample data during tests.